--- a/Block 4/Упорядоченные и неупорядоченные списки в HTML.html
+++ b/Block 4/Упорядоченные и неупорядоченные списки в HTML.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="styles.css">
 		<title>Упорядоченные и неупорядоченные списки в HTML</title>
 	</head>
 	<body>
