--- a/Practical work/Практика на основные HTML теги №3.html
+++ b/Practical work/Практика на основные HTML теги №3.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="styles.css">         
 		<title>Практика на основные HTML теги №3</title>
 	</head>
 	<body>
